# willow

./: Cargo.toml  Makefile  README.md
codegen/: Cargo.toml
codegen/src/: gen.rs  lib.rs  parse.rs
example/: Cargo.toml  README.md  index.html  justfile
example/src/: foo.frag  foo.vert  lib.rs
src/: index.rs  lib.rs  program.rs  traits.rs  types.rs  uniform.rs
