[workspace]
members = [
	".",
	"codegen",
	"example",
]

[package]
name = "willow"
version = "0.0.1"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
description = "Willow is a library for using the WebGL API in WebAssembly projects."
license = "Apache-2.0"
repository = "https://github.com/SOF3/willow"

[dependencies]
cfg-if = "1.0.0"
field-offset = "0.3.4"
once_cell = "1.7.2"
paste = "1.0.5"
typed-builder = "0.9.0"

[dependencies.nalgebra]
version = "0.26.2"
optional = true

[dependencies.willow-codegen]
version = "0.0.1"
path = "codegen"

[dependencies.web-sys]
version = "0.3.47"
features = [
	"WebGlBuffer",
	"WebGlProgram",
	"WebGlRenderingContext",
	"WebGlShader",
	"WebGlUniformLocation",
]

[features]
default = ["nalgebra"]
