[workspace]
members = [
	".",
	"codegen",
	"example",
]

[package]
name = "willow"
version = "0.0.3"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
description = "Willow is a library for using the WebGL API in WebAssembly projects."
license = "Apache-2.0"
repository = "https://github.com/SOF3/willow"

[dependencies]
anyhow = "1.0.43"
cfg-if = "1.0.0"
field-offset = "0.3.4"
js-sys = "0.3.53"
log = "0.4.14"
once_cell = "1.8.0"
paste = "1.0.5"
wasm-bindgen = "0.2.76"

[dependencies.nalgebra]
version = "0.29.0"
optional = true

[dependencies.willow-codegen]
version = "0.0.3"
path = "codegen"

[dependencies.web-sys]
version = "0.3.53"
features = [
	"WebGlBuffer",
	"WebGlProgram",
	"WebGlRenderingContext",
	"WebGlShader",
	"WebGlUniformLocation",
	"HtmlCanvasElement",
]

[features]
default = ["nalgebra"]
