[package]
name = "willow-codegen"
version = "0.0.3"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
description = "Procedural macro crate for willow. This crate should not be used directly."
license = "Apache-2.0"
repository = "https://github.com/SOF3/willow"

[lib]
proc-macro = true

[dependencies]
heck = "0.3.3"
proc-macro2 = "1.0.29"
quote = "1.0.9"

[dependencies.syn]
version = "1.0.77"
features = ["full"]
