[package]
name = "willow-example"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
field-offset = "0.3.4"
nalgebra = "0.26.2"
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3.51"
features = [
	"Window",
	"Document",
]

[dependencies.willow]
path = ".."
