[package]
name = "willow-example"
version = "0.1.1"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
description = "Example webapp for willow"
license = "Apache-2.0"
repository = "https://github.com/SOF3/willow"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
field-offset = "0.3.4"
nalgebra = "0.29.0"
wasm-bindgen = "0.2.76"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.52"
features = [
	"Window",
	"Document",
]

[dependencies.willow]
path = ".."
version = "0.0.3"
